Fix create team spinner not showing

--- a/www/teams/app-team.less
+++ b/www/teams/app-team.less
@@ -12,9 +12,6 @@
 @import (reference) "../../customize/src/less2/include/colortheme-all.less";
 @import (reference) '../../customize/src/less2/include/export.less';
 
-.fa-spinner,.fa-check{
-    margin-left:0.5rem;
-}
 
 &.cp-app-team {
     .framework_min_main(
@@ -316,9 +313,6 @@
             }
             .cp-teams-invite-password {
                 margin-bottom: 20px;
-            }
-            i.fa.fa-spin.fa-spinner {
-                margin-right: 10px;
             }
         }
         div#cp-sidebarlayout-rightside .cp-team-offline {
